# toml-bench

./: .gitignore  README.md  README.raw.md  Report-toml_test_v1.0.0.md  Report-toml_test_v1.1.0.md  pyproject.toml  run-tests.py  setup.py
.codesandbox/: Dockerfile  tasks.json
.github/workflows/: build.yml
reports/: with_python3.11.md  with_toml-test_latest.md  with_toml-test_v1.0.0.md  with_toml-test_v1.1.0.md  with_toml-test_v1.2.0.md  with_toml-test_v1.3.0.md  with_toml-test_v1.4.0.md
toml_bench/: __main__.py  api.py  case.py  cli.py  sets.py  suite.py  utils.py
toml_bench/cases/: __init__.py  compliance.py  hetero_array.py  keys_order.py  speed.py  unicode.py  value_none.py  version.py
