[tool.poetry]
name = "toml-bench"
version = "0.0.4"
description = "Benchmarking for python toml libraries"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyparam = "^0.5"
toml = "^0.10.2"
rtoml = "^0.8"
pytomlpp = "^1.0.11"
tomli = "2.0.1"
tomli-w = "^1.0.0"
qtoml = "^0.3.1"
tomlkit = "^0.11.0"
python-dateutil = "^2.8.2"
importlib-metadata = "^4"
# required by tomlkit, but cannot be inferred by poetry
regex = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
toml-bench = "toml_bench.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
