[tool.poetry]
name = "toml-bench"
version = "0.3.1"
description = "Benchmarking for python toml libraries"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
benchwork = "^0.0.2"
python = "^3.9"
pyparam = "^0.5"
toml = "^0.10.2"
rtoml = "^0.9.0"
# pytomlpp does not support python 3.11 yet
pytomlpp = {version = "^1.0.13", python = "<3.11"}
tomli = "^2.0.1"
tomli-w = "^1.0.0"
qtoml = "^0.3.1"
tomlkit = "^0.11.8"
python-dateutil = "^2.8.2"
importlib-metadata = "^5.0.0"
# required by tomlkit, but cannot be inferred by poetry
regex = "^2022.10.31"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
toml-bench = "toml_bench.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
