[tool.poetry]
name = "toml-bench"
version = "0.4.0"
description = "Benchmarking for python toml libraries"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
benchwork = "^0.0.2"
toml = "^0.10.2"
rtoml = "^0.11.0"
# pytomlpp does not support python 3.11 yet
pytomlpp = {version = "^1.0.13", python = "<3.11"}
tomli = "^2.0.1"
tomli-w = "^1.0.0"
qtoml = "^0.3.1"
tomlkit = "^0.12.5"
python-dateutil = "^2.8.2"
importlib-metadata = "^7.2.1"
# required by tomlkit, but cannot be inferred by poetry
regex = "^2024.5.15"
argx = "^0.2.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
toml-bench = "toml_bench.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
